# schedule-vcs

./: README.md
api/: package-lock.json  package.json  server.js
api/apollo/: package.json  server.js
api/strawberry/: main.py  requirements.txt
api/strawberry/schedule/: __init__.py  loader.py  schedule.py
api/strawberry/student/: loader.py  types.py
api/strawberry/utils/: env.py  mongo.py  scalars.py
api/strawberry/version/: __init__.py  loader.py  types.py  version.py
bot/: main.py  pyproject.toml
bot/graphs/schedule/: models.py  searcher.py
bot/graphs/student/: loader.py  models.py  searcher.py
bot/keyboards/inline/: common.py
bot/keyboards/reply/: common.py
bot/routers/: schedule.py  student.py
bot/states/: common.py
bot/utils/: config.py  consts.py  gql.py
vcs/: main.py  pyproject.toml  requirements.txt
vcs/schedule/: loader.py  searcher.py  types.py
vcs/student/: __init__.py  loader.py  searcher.py  student.py
vcs/version/: loader.py  searcher.py
