[tool.poetry]
name = "pumhub-bot"
version = "1.0.0"
description = ""
authors = ["machnevegor"]
license = ""

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0a18"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
