[tool.poetry]
name = "pumhub-vcs"
version = "1.0.0"
description = ""
authors = ["machnevegor <egorikhelp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
attr = "^0.3.1"
fuzzywuzzy = "^0.18.0"
Levenshtein = "^0.16.0"
motor = "^2.5.1"
python-dotenv = "^0.19.2"
strawberry-graphql = "^0.93.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
